2007-12-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* README, data/help/changes.txt, data/help/header.txt, NEWS: Updated
	release date.
	* src/game.cpp, src/gui/menuwindow.cpp, src/gui/itemcontainer.cpp,
	src/main.cpp, src/CMakeLists.txt, src/net/inventoryhandler.cpp,
	src/Makefile.am: Disabled non-functional item shortcut window.

2007-12-23  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particleemitter.cpp, src/particleemitter.h: Particle images
	are now reference-counted properly.
	* src/resources/spritedef.cpp: Error placeholder is now used when attempting
	to load a sprite definition file that doesn't exist.
	* src/monster.cpp, src/player.cpp: Avoided attempts to load "data/graphics/"
	when a monster or equipment piece has no sprite.
	* data/graphics/particles/cookingfire.particle.xml: Removed some particle
	properties that did nothing because they were misspelled.

2007-12-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, configure.ac, INSTALL, data/help/header.txt,
	NEWS, CMakeLists.txt: Updated version to 0.0.24.
	* src/net/chathandler.cpp, NEWS: Make sure chat messages are also
	trimmed for the local player.

2007-12-21  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/updatewindow.cpp: Attempted to fix client
	freeze when unable to connect to update host, and added exit dialog
	when client loses connection.

2007-12-21  Bjørn Lindeijer <bjorn@lindeijer.nl>

	* src/gui/shoplistbox.cpp: Fixed shop list box not to scroll up when
	the selection is removed.
	* src/resources/resourcemanager.h, src/resources/resourcemanager.cpp:
	Added logging of error on PHYSFS_addToSearchPath.
	* src/localplayer.cpp, src/inventory.h, src/gui/inventorywindow.cpp,
	src/inventory.cpp, src/localplayer.h: Fixed inventory size not
	matching the size assumed by eAthena, and related memory corruption.
	* src/main.cpp: Increased default chat log length.

2007-12-19  Philipp Sehmisch  <tmw@crushnet.org>
